--- a/recovery.html
+++ b/recovery.html
@@ -20,9 +20,10 @@
 
 	<div class="container" id="container">
 		<div class="form-container sign-in-container">
-			<form id="recovery_form">
+			<form id="recovery_form_final">
 				<h1>Recover Your Account</h1>
-				<input class="input__tag" type="email" placeholder="Email" validate id="email"  required="" />
+
+        <input class="input__tag" type="password" placeholder="enter new password" validate id="password"  required="" />
 				<span id="mobileno" class="text-danger font-weight-bold"> </span>
 
         <p id="err_msg"></p>
@@ -50,5 +51,5 @@
 
 </script>
 
-<script src = "main.js"></script>
+<script src = "recovery.js"></script>
 </html>
